@@ -1,0 +1,185 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Aeotec ZW116 Nano Switch, base on Engineering Spec 12/07/2016
+Product Type ID: EU=0x00, US=0x01, AU=0x02 CN=0x1D 
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="list" index="3" genre="config" label="Over current protection" units="" min="0" max="1" size="1" value="1">
+            <Help>Output load will be closed after 30 seconds if the current exceeds (US: 15.5A, AU or EU: 10.5A).</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+		<Value type="list" index="4" genre="config" label="Over heat protection" units="" min="0" max="1" size="1" value="0">
+            <Help>Output load will be closed after 30 seconds if the temperature inside the product exceeds 100C.</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+		</Value>
+			<Help>To set which notification would be sent to the associated nodes in association group 1 when the state of output load is changed</Help>
+			<Item label="None" value="0" />
+			<Item label="Hail" value="1" />
+			<Item label="Basic" value="2" />
+			<Item label="Hail CC when using the external switch to switch the loads" value="3" />
+		</Value>		
+			<Help>To set which notification would be sent to the associated nodes in association group 3 when using the external switch 1 to switch the loads</Help>
+			<Item label="None" value="0" />
+			<Item label="Basic" value="1" />
+		</Value>		
+			<Help>To set which notification would be sent to the associated nodes in association group 4 when using the external switch 2 to switch the loads</Help>
+			<Item label="None" value="0" />
+			<Item label="Basic" value="1" />
+		</Value>
+		<Value type="list" index="83" genre="config" label="LED status" units="" size="1" value="0">
+			<Help>Configure the state of LED when it is in 3 modes below</Help>
+			<Item label="The LED will follow the status" value="0" />
+			<Item label="LED will follow the status (on/off) of its load but the LED will turn off after 5 seconds" value="1" />
+			<Item label="Night light mode" value="2" />
+		</Value>
+		<Value type="int" index="84" genre="config" label="Time set for Night light mode" value="524306">
+			<Help>
+			Value1: Hour of ON.
+			Value2: Minute of ON.
+			Value3: Hour of OFF.
+			Value4: Minute of OFF.
+			E.g. The default setting is the Night light mode is enabled at 12: 00 and disabled at 8:00.
+			</Help>
+		</Value>
+		<Value type="int" index="86" genre="config" label="Time set for the turning on the output load" value="18906880">
+			<Help>
+			Value1: 0= Disable / 1= Enable. 
+			Value2: Weekday (Bit 0-6 means Monday to Sunday).
+			Value3: Hour of turning ON.
+			Value4: Minute of turning ON
+			E.g. The default setting 0x001207F00
+			</Help>
+		</Value>
+		<Value type="int" index="87" genre="config" label="Time set for the turning OFF the output load" value="24149760">
+			<Help>
+			Value1: 0= Disable / 1= Enable. 
+			Value2: Weekday (Bit 0-6 means Monday to Sunday).
+			Value3: Hour of turning OFF.
+			Value4: Minute of turning OFF
+			E.g. The default setting 0x001707F00
+			</Help>
+		</Value>
+		<Value type="list" index="90" genre="config" label="Enable/disable the parameter 91 and 92" units="" size="1" value="0">
+			<Help>If this parameter is set to 1 (Enable), the parameter 101 – 103 should be set to 0.</Help>
+			<Item label="Disable" value="0" />
+			<Item label="Enable" value="1" />
+		</Value>
+		<Value type="short" index="91" genre="config" label="Minimum Change to send Report (Watt)" units="watts" min="0" max="6000" size="2" value="25">
+			<Help>The value represents the minimum change in wattage for a Report to be sent (default 25 W)</Help>
+		</Value>
+		<Value type="byte" index="92" genre="config" label="Minimum Change to send Report (%)" units="%" min="0" max="100" value="5">
+			<Help>The value represents the minimum percentage change in wattage for a Report to be sent (Default 5)</Help>
+		</Value>
+		<Value type="button" index="100" genre="config" label="Default Group Reports" units="" write_only="true" affects="101,102,103">
+		  <Help>Set report types for groups 1, 2 and 3 to default.</Help>
+		</Value>
+		<Value type="int" index="101" genre="config" label="Report type sent in Reporting Group 1" units="" value="0">
+		  <Help>
+			  Defines the type of report sent for reporting group 1.
+			  1 is meter report for voltage.
+			  2 is meter report for current.
+			  4 is meter report for watts.
+			  8 is meter report for kilowatts.
+		 Value 1 (msb) Reserved
+		 Value 2 Reserved
+		 Value 3 Reserved
+		 Value 4 (lsb) bits 7-4 reserved
+			  bit 3 current
+			  bit 2 voltage
+			  bit 1 watt
+			  bit 0 kWh
+		  </Help>
+		</Value>
+		<Value type="int" index="102" genre="config" label="Report type sent in Reporting Group 2" units="" value="0">
+		  <Help>
+			  Defines the type of report sent for reporting group 2.
+			  1 is meter report for voltage.
+			  2 is meter report for current.
+			  4 is meter report for watts.
+			  8 is meter report for kilowatts.
+		 Value 1 (msb) Reserved
+		 Value 2 Reserved
+		 Value 3 Reserved
+		 Value 4 (lsb) bits 7-4 reserved
+			  bit 3 current
+			  bit 2 voltage
+			  bit 1 watt
+			  bit 0 kWh
+		  </Help>
+		</Value>
+		<Value type="int" index="103" genre="config" label="Report type sent in Reporting Group 3" units="" value="0">
+		  <Help>
+			  Defines the type of report sent for reporting group 3.
+			  1 is meter report for voltage.
+			  2 is meter report for current.
+			  4 is meter report for watts.
+			  8 is meter report for kilowatts.
+		 Value 1 (msb) Reserved
+		 Value 2 Reserved
+		 Value 3 Reserved
+		 Value 4 (lsb) bits 7-4 reserved
+			  bit 3 current
+			  bit 2 voltage
+			  bit 1 watt
+			  bit 0 kWh
+		  </Help>
+		</Value>
+		<Value type="button" index="110" genre="config" label="Set 111-113 to default" units="" write_only="true" value="0" affects="111,112,113">
+		  <Help>Set time interval for sending reports for groups 1, 2 and 3 to default.</Help>
+		</Value>
+		<Value type="int" index="111" genre="config" label="Send Interval for Reporting Group 1" units="seconds" min="0" max="2147483647" value="10">
+		  <Help>Defines the time interval when the defined report for group 1 is sent.</Help>
+		</Value>
+		<Value type="int" index="112" genre="config" label="Send Interval for Reporting Group 2" units="seconds" min="0" max="2147483647" value="600">
+		  <Help>Defines the time interval when the defined report for group 2 is sent.</Help>
+		</Value>
+		<Value type="int" index="113" genre="config" label="Send Interval for Reporting Group 3" units="seconds" min="0" max="2147483647" value="600">
+		  <Help>Defines the time interval when the defined report for group 3 is sent.</Help>
+		</Value>
+		<Value type="list" index="120" genre="config" label="Set the external switch mode for S1" units="" min="0" max="1" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+			<Item label="Enter automatic identification mode" value="0"/>
+            <Item label="2-state switch mode" value="1"/>
+			<Item label="3-way switch mode" value="2"/>
+            <Item label="momentary button mode" value="3"/>
+        </Value>
+		<Value type="list" index="121" genre="config" label="Set the external switch mode for S2" units="" min="0" max="1" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+			<Item label="Enter automatic identification mode" value="0"/>
+            <Item label="2-state switch mode" value="1"/>
+			<Item label="3-way switch mode" value="2"/>
+            <Item label="momentary button mode" value="3"/>
+        </Value>
+		<Value type="list" index="122" genre="config" label="Set the control destination of the external switch" units="" min="0" max="1" size="1" value="3">
+            <Help></Help>
+			<Item label="Control itself" value="1"/>
+            <Item label="Control other nodes in the same network" value="2"/>
+			<Item label="Control itself and other nodes in the same network" value="3"/>
+        </Value>
+        <Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+            <Help>Enable/disable Configuration Locked</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+            <Help>Reset to factory defaults</Help>
+            <Item label="Reset to factory default setting" value="0"/>
+            <Item label="Normal" value="1"/>
+            <Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="4">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Retransmit"/>
+			<Group index="3" max_associations="5" label="Control Key1"/>
+			<Group index="4" max_associations="5" label="Control Key2"/>
+        </Associations>
+    </CommandClass>
+</Product>
