@@ -70,6 +70,7 @@ DISTFILES =	.gitignore \
 	config/aeotec/zw099.xml \
 	config/aeotec/zw100.xml \
 	config/aeotec/zw112.xml \
+	config/aeotec/zw116.xml \
 	config/aeotec/zw117.xml \
 	config/aeotec/zw120.xml \
 	config/aeotec/zw121.xml \
